# ferrocrawl

./: .gitignore  Cargo.toml  README.md
config/: crawler.toml
crates/fc-api/: Cargo.toml
crates/fc-cli/: Cargo.toml
crates/fc-core/: Cargo.toml
crates/fc-core/src/: config.rs  error.rs  lib.rs  traits.rs  types.rs
crates/fc-engine/: Cargo.toml
crates/fc-engine/src/: extractor.rs  fetcher.rs  lib.rs  parser.rs
crates/fc-export/: Cargo.toml
crates/fc-scheduler/: Cargo.toml
crates/fc-scheduler/src/: bloom.rs  frontier.rs  lib.rs  proxy.rs  rate_limiter.rs
crates/fc-solana/: Cargo.toml
infra/: docker-compose.yml
infra/prometheus/: prometheus.yml
schemas/: example.toml
