[package]
name = "fc-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
url          = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
async-trait  = { workspace = true }
bytes        = { workspace = true }
config       = { workspace = true }
toml         = { workspace = true }
tracing      = { workspace = true }
